--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Doria Arnaud,a frontend web developer with 7+ years of programming.Discover here a project sample of website and Saas user interface builded from scratch using the javascript framework Vue.js 3 and later with Vuetify plugin.">
   <meta name="keywords" content="doria,arnaud,front-end,frontend web developer,web developer,website,from scratch,vuejs,vuetify,javascript,vite,npm,axios,pinia,html5,css3">
   <link rel="canonical" href="https://en.doriaarnaud.online"/>
+	<meta name="google-site-verification" content="bkNVD3pTs8UG4EjBtEBhDY_jzsVUQz-VwxiUEVFBF3o" />
   <meta name="author" content="Doria Arnaud">
   <title>Doria Arnaud</title>
 </head>
